(lang dune 3.16)

(name parco)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Dogue")

(maintainers "Dogue")

(license BSD-3)

(documentation https://lmaowutdocs?)

(package
 (name parco)
 (synopsis "Parser combinators in OCaml")
 (description "A learning project")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
